--- a/SNAKE_2.cbp
+++ b/SNAKE_2.cbp
@@ -14,6 +14,11 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/lib/SDL_image.lib" />
+					<Add library="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/lib/SDL_mixer.lib" />
+					<Add library="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/lib/SDL_ttf.lib" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/SNAKE_2" prefix_auto="1" extension_auto="1" />
@@ -42,6 +47,17 @@
 			<Add library="dxguid" />
 			<Add directory="C:/Program Files (x86)/CodeBlocks/SDL-1.2.15/lib" />
 		</Linker>
+		<Unit filename="constantes.h" />
+		<Unit filename="jeu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="jeu.h" />
+		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="utilitaires.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
